<resources>
    <string name="app_name">Quote Table</string>
    <string name="bid_hint">bid value</string>
    <string name="ask_hint">ask value</string>
    <string name="edit_string">Edit</string>
    <string name="info_string">Learn more about dxFeed APIs</string>
    <string name="notice_string">NOTICE: Data is delayed at least 15 minutes.</string>

    <string name="add_string">+</string>

    <string name="quotes_title">Quote Table</string>
    <string name="symbols_title">Symbols</string>
    <string name="add_symbols_title">Add symbols</string>
    <string name="chart_parameter_title">Chart parameters</string>
    <string name="candle_type">Candle Type</string>

    <string name="buy_title">Buy</string>
    <string name="price_title">Price</string>
    <string name="sell_title">Sell</string>
    <string name="candle_notice_title">NOTICE: only the last %d candles are displayed</string>


    <string name="candle_chart_menu">Candle Chart</string>
    <string name="market_depth_menu">Depth Of Market</string>

    <string name="state_connecting">\uD83D\uDFE0 Connecting</string>
    <string name="state_connected">\uD83D\uDFE2 Connected</string>
    <string name="state_closed">\uD83D\uDD34 Closed</string>
    <string name="state_other">\uD83D\uDD34 Not connected</string>
    <string-array name="candle_options">
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
</resources>