<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".CandleChartActivity">

    <TextView
        android:id="@+id/symbol_title"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_symbols_title"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.CandleStickChart
        android:id="@+id/candle_stick_chart"
        app:layout_constraintBottom_toTopOf="@+id/chart_parameter_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbol_title"
        app:layout_constraintVertical_bias="0.593"
        android:layout_marginBottom="15dp"

        android:layout_width="0dp"
        android:layout_height="0dp"/>


    <TextView
        android:id="@+id/chart_parameter_title"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="30dp"
        android:text="@string/chart_parameter_title"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/candle_type_title"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="30dp"
        android:text="@string/candle_type"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"/>
    <Spinner
        android:id="@+id/spinnerOptions"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/candle_type_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="19dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
